Fix sbt build for GitHub API